fix bug: jump-container not displaying right

--- a/dracula.scss
+++ b/dracula.scss
@@ -148,8 +148,9 @@ tbody {
 }
 
 //scroll bar
-.mod-side-operation__jump-to-top .icon-back:hover {
+.jump-container .mod-side-operation__jump-to-top .icon-back:hover {
     background: #B694F5;
+    color: #fff;
 }
 
 //tool
